--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,8 +7,8 @@ name = 'ray-quickstart'
 authors = [
     {name='Tuyen Truong', email='tuyen.truong@gmail.com'}
 ]
-version= '0.1.2'
-description='Starter ML project that allows you to develop on your Mac or PC computer and train using your remote GPU server'
+version= '0.1.3'
+description='Wrapper around the Ray library to make it easier for you to set up your ML project to use Ray to train/tune your models remotely on a GPU-enabled computer'
 readme = 'README.md'
 requires-python = '>=3.7'
 dependencies = [
