--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,12 +7,12 @@ name = 'ray-quickstart'
 authors = [
     {name='Tuyen Truong', email='tuyen.truong@gmail.com'}
 ]
-version= '0.1.3'
+version= '0.1.4'
 description='Wrapper around the Ray library to make it easier for you to set up your ML project to use Ray to train/tune your models remotely on a GPU-enabled computer'
 readme = 'README.md'
 requires-python = '>=3.7'
 dependencies = [
-    'ray',
+    'ray[default]',
 ]
 classifiers = [
     'Development Status :: 3 - Alpha',
