--- a/setup/ubuntu/etc/systemd/system/ray-cluster.service
+++ b/setup/ubuntu/etc/systemd/system/ray-cluster.service
@@ -1,13 +1,14 @@
 [Unit]
-Description=Starts and stops the Ray cluster
+Description=Ray cluster
 Requires=network-online.target
 After=network-online.target time-sync.target
 
 [Service]
 Type=simple
-User=USER
-ExecStart=/home/USER/git/ai/scripts/ray_start.sh
-ExecStop=/home/USER/git/ai/scripts/ray_stop.sh
+User=tuyen
+WorkingDirectory=/home/USER/git/ray-quickstart
+ExecStart=/bin/bash -c "source /home/USER/anaconda3/etc/profile.d/conda.sh && conda activate ray-quickstart && pipenv run /home/USER/git/ray-quickstart/scripts/ray_start.sh"
+ExecStop=/bin/bash -c "source /home/USER/anaconda3/etc/profile.d/conda.sh && conda activate ray-quickstart && pipenv run /home/USER/git/ray-quickstart/scripts/ray_stop.sh"
 RemainAfterExit=yes
 
 [Install]
