--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,7 @@ name = 'ray-quickstart'
 authors = [
     {name='Tuyen Truong', email='tuyen.truong@gmail.com'}
 ]
-version= '0.1.5'
+dynamic = ["version"]
 description='Wrapper around the Ray library to make it easier for you to set up your ML project to use Ray to train/tune your models remotely on a GPU-enabled computer'
 readme = 'README.md'
 requires-python = '>=3.7'
@@ -35,6 +35,9 @@ script-files = [
     'scripts/ubuntu_start.bat',
     'scripts/ubuntu_stop.bat',
 ]
+
+[tool.setuptools.dynamic]
+version = {attr = "ray_quickstart.__version__"}
 
 [tool.setuptools.packages.find]
 where = ['src']
