Added example project for ray-quickstart project

--- a/Pipfile
+++ b/Pipfile
@@ -1,11 +1,11 @@
-[[source]]
-url = "https://pypi.org/simple"
-verify_ssl = true
-name = "pypi"
-
 [packages]
-ray = {extras = ["default"], version = "*"}
+numpy = "*"
+pandas = "*"
 torch = "*"
+ray = {extras = ["default"], version = "*"}
+tabulate = "*"
+transformers = "*"
+datasets = "*"
 
 [dev-packages]
 
