--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,14 +5,14 @@ build-backend = 'setuptools.build_meta'
 [project]
 name = 'ray-quickstart'
 authors = [
-    {name='Tuyen Truong', email='tuyen.truong@gmail.com'}
+    {name = 'Tuyen Truong', email = 'tuyen.truong@gmail.com'}
 ]
 dynamic = ["version"]
 description='Wrapper around the Ray library to make it easier for you to set up your ML project to use Ray to train/tune your models remotely on a GPU-enabled computer'
 readme = 'README.md'
 requires-python = '>=3.7'
 dependencies = [
-    'ray[default]', 'torch',
+    'torch', 'ray[default]',
 ]
 classifiers = [
     'Development Status :: 3 - Alpha',
