Renamed install command in setup.py to install_env so it doesn't conflict with building of PyPI package

--- a/Pipfile
+++ b/Pipfile
@@ -9,8 +9,8 @@ verify_ssl = true
 name = "pytorch"
 
 [packages]
-torch = {version = ">=1.9", index = "pytorch"}
-torchvision = {version = ">=0.14", index = "pytorch"}
+torch = "*"
+torchvision = "*"
 numpy = "*"
 pandas = "*"
 scipy= "*"
