Generating SSH key in the Ubuntu instance so it can be used by the local computer to connect toAdded SSH key for use to connect to the Ubuntu instance to make it easier to get started with ray-quickstart

--- a/config/ray_config.yaml
+++ b/config/ray_config.yaml
@@ -1,6 +1,6 @@
 driver:
   user: 'tuyen'
-  private_key_file: '~/.ssh/id_rsa'
+  private_key_file: '~/.ssh/id_rsa_ubuntu'
 
 ray_head:
   hostname_or_ip_address: '192.168.2.4'
