--- a/environment.mac.yaml
+++ b/environment.mac.yaml
@@ -7,6 +7,7 @@ dependencies:
   - python==3.10.11
   - pip
   - pipenv
+  - build
   - grpcio=1.43.0 # install conda version to get version of grpc so that Ray works on Macs
   - apple::tensorflow-deps
   - twine
